@@ -7,6 +7,7 @@ Merged from 2.1:
  * Cannot replace token does not exist - DN node removed as Fat Client (CASSANDRA-9871)
 Merged from 2.0:
  * Don't cast expected bf size to an int (CASSANDRA-9959)
+ * Add checksum to saved cache files (CASSANDRA-9265)
 
 3.0.0-alpha1
  * Implement proper sandboxing for UDFs (CASSANDRA-9402)
